--- a/stylesheet3.css
+++ b/stylesheet3.css
@@ -31,22 +31,19 @@ body {
 }
 
 .homebutton {
-	border-bottom: 1px solid #333;
-	border-top: 1px solid #333;
-	border-left: 2px solid #333;
-	border-right: 2px solid #333;
+	border-top: 0px solid #737373;
+	border-left: 0px solid #737373;
+	border-right: 2px solid #737373;
 }
 	
 .noelbutton {
-	border-bottom: 1px solid #333;
-	border-top: 1px solid #333;
+	border-right: 2px solid #737373;
 }
 
 .darabutton {
-	border-bottom: 1px solid #333;
-	border-top: 1px solid #333;
-	border-left: 2px solid #333;
-	border-right:2px solid #333;
+
+	border-right:2px solid #737373;
+	border-radius: 3px;
 }
 	
 .header {
@@ -62,10 +59,10 @@ body {
 	text-align: center;
 	font-family: Trebuchet MS;
 	font-size: 30px;
-	box-shadow: 3px 2px 3px #000,
-	-3px -1px 3px #000, 
-	3px -1px 3px #000,
-	-3px 1px 3px #333;
+	box-shadow: 3px 2px 3px #111,
+	-3px -1px 3px #111, 
+	3px -1px 3px #111,
+	-3px 1px 3px #111;
 }
 
 .home-subhead {
